--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,6 +14,10 @@ updates:
     ignore:
       - dependency-name: "org.springframework.boot:*"
         versions: [">= 4.0.0"]
+      - dependency-name: "org.springframework.security:*"
+        versions: [">= 7.0.0"]
+      - dependency-name: "org.springdoc:*"
+        versions: [">= 3.0.0"]
     groups:
       java:
         applies-to: version-updates
