Update workflow name and JS SDK version
Renamed the GitHub Actions workflow from 'Deploy' to 'Publish Packages' for clarity. Updated the Turing JS SDK package version to 2025.4.2 in package.json and package-lock.json. Added a step to echo the TAG_NAME during release creation in the workflow.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,7 +6,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Deploy
+name: Publish Packages
 
 on:
   push:
@@ -89,6 +89,7 @@ jobs:
         run: |
           mvn install package -Dgpg.skip=true -Dturing.open-browser=false
           export TAG_NAME=v$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout)
+          echo "TAG_NAME=${TAG_NAME}"
           gh release create ${TAG_NAME} --generate-notes
           gh release upload ${TAG_NAME} turing-app/target/viglet-turing.jar --clobber
           gh release upload ${TAG_NAME} turing-java-sdk/target/turing-java-sdk.jar --clobber
