--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -16,6 +16,8 @@ updates:
         versions: [">= 4.0.0"]
       - dependency-name: "org.springframework.security:*"
         versions: [">= 7.0.0"]
+      - dependency-name: "org.springframework:*"
+        versions: [">= 7.0.0"]
       - dependency-name: "org.springdoc:*"
         versions: [">= 3.0.0"]
     groups:
