Add Spring Boot extension to VSCode recommendations
Included 'vmware.vscode-spring-boot' in the recommended extensions list to support Spring Boot development in VSCode.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -54,6 +54,7 @@
     "waderyan.gitblame",
     "wmaurer.change-case",
     "xabikos.javascriptsnippets",
-    "zuoez02.tslint-snippets"
+    "zuoez02.tslint-snippets",
+    "vmware.vscode-spring-boot"
   ]
 }
