--- a/turing-mcp-server/pom.xml
+++ b/turing-mcp-server/pom.xml
@@ -14,7 +14,7 @@
     <url>https://github.com/openviglet/turing</url>
     <packaging>jar</packaging>
     <properties>
-        <java.version>21</java.version>
+        <java.version>25</java.version>
         <spring-ai.version>1.1.2</spring-ai.version>
     </properties>
     <dependencies>
@@ -82,7 +82,13 @@
                 <version>${spring-boot.version}</version>
                 <configuration>
                     <skip>false</skip>
-                    <executable>true</executable>
+                    <parameters>true</parameters>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </path>
+                    </annotationProcessorPaths>
                 </configuration>
                 <executions>
                     <execution>
