Migrate from Date to Instant and set Java 21 as target
Replaced usage of java.util.Date with java.time.Instant across model, repository, and audit classes for improved time handling. Updated Maven and Java compiler settings in all modules to target Java 21 instead of Java 25 or 11. Adjusted application.yaml configuration for Artemis and GraphQL settings to match updated conventions.

--- a/turing-app/src/main/resources/application.yaml
+++ b/turing-app/src/main/resources/application.yaml
@@ -37,14 +37,12 @@ spring:
     mode: HTML
     check-template: true
     check-template-location: true
-    enabled: true
     prefix: classpath:public/
     suffix: .html
   artemis:
-    mode: EMBEDDED
+    mode: embedded
     broker-url: localhost:61616
     embedded:
-      broker-name: artemis
       enabled: true
       persistent: true
       data-directory: store/queue
@@ -68,7 +66,7 @@ spring:
     graphiql:
       enabled: true
       path: /graphiql
-    path: /graphql
+    http.path: /graphql
     cors:
       allowed-origins: ${turing.allowedOrigins}
       allowed-methods: GET,POST
