Update central-publishing-maven-plugin configuration
Set <skipPublishing>true</skipPublishing> in the root pom.xml to skip publishing by default. Explicitly configure the central-publishing-maven-plugin in turing-commons and turing-java-sdk modules with <skipPublishing>false</skipPublishing> to enable publishing for these modules. Cleaned up plugin configuration structure in turing-commons.

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
                 <extensions>true</extensions>
                 <configuration>
                     <publishingServerId>central</publishingServerId>
+                    <skipPublishing>true</skipPublishing>
                 </configuration>
             </plugin>
             <plugin>
