--- a/turing-java-sdk/pom.xml
+++ b/turing-java-sdk/pom.xml
@@ -89,7 +89,13 @@
     <build>
         <finalName>turing-java-sdk</finalName>
         <plugins>
-            <!-- Maven Compiler Plugin -->
+            <plugin>
+                <groupId>org.sonatype.central</groupId>
+                <artifactId>central-publishing-maven-plugin</artifactId>
+                <configuration>
+                    <skipPublishing>false</skipPublishing>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
