Update Maven publishing configuration and workflow
Adds pluginManagement for central-publishing-maven-plugin in pom.xml and moves most configuration there. Updates GitHub Actions workflow to set -DskipPublishing=true during deploy. This streamlines publishing configuration and ensures publishing is skipped as intended.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -74,7 +74,7 @@ jobs:
             }]
       - name: Publish package
         run: |
-          mvn --batch-mode -pl turing-commons,turing-java-sdk -P release -am deploy -DskipTests -Dturing.open-browser=false
+          mvn --batch-mode -pl turing-commons,turing-java-sdk -P release -am deploy -DskipPublishing=true -DskipTests -Dturing.open-browser=false
         # cd turing-js-sdk/js-sdk-lib
         # npm publish
         env:
