Refactor ORDER enum to Order in TurSNQuery and update usages
Renamed the ORDER enum to Order in TurSNQuery for improved Java naming conventions. Updated all references in source, test, and sample code, as well as related classes such as TurSNSortField and TurToolsService. Also added central-publishing-maven-plugin to commons and sdk pom.xml files, and moved plugin configuration to pluginManagement in the root pom.xml.

--- a/pom.xml
+++ b/pom.xml
@@ -147,21 +147,24 @@
                 <module>turing-java-sdk</module>
             </modules>
             <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.sonatype.central</groupId>
+                            <artifactId>central-publishing-maven-plugin</artifactId>
+                            <version>0.9.0</version>
+                            <extensions>true</extensions>
+                            <configuration>
+                                <publishingServerId>central</publishingServerId>
+                                <excludeArtifacts>
+                                    <artifact>turing</artifact>
+                                </excludeArtifacts>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
                 <plugins>
                     <plugin>
-                        <groupId>org.sonatype.central</groupId>
-                        <artifactId>central-publishing-maven-plugin</artifactId>
-                        <version>0.9.0</version>
-                        <extensions>true</extensions>
-                        <configuration>
-                            <publishingServerId>central</publishingServerId>
-                            <excludeArtifacts>
-                                <artifact>turing</artifact>
-                            </excludeArtifacts>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
                         <version>3.2.8</version>
