--- a/turing-commons/pom.xml
+++ b/turing-commons/pom.xml
@@ -158,6 +158,10 @@
         <finalName>turing-commons</finalName>
         <plugins>
             <plugin>
+                <groupId>org.sonatype.central</groupId>
+                <artifactId>central-publishing-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.14.1</version>
