Refactor repository save methods and improve merge logic
Refactored all repository interfaces to override the JpaRepository save method with a generic type, improving type safety and Spring Data compatibility. Enhanced merge logic in TurSNMergeProvidersProcess and TurSNUtils for better handling of List and String types. Updated Maven compiler plugin configuration to show warnings and enable unchecked linting. Added encoding and compiler properties to turing-mcp-server/pom.xml.

--- a/turing-app/pom.xml
+++ b/turing-app/pom.xml
@@ -358,6 +358,10 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.14.1</version>
                     <configuration>
+                        <showWarnings>true</showWarnings>
+                        <compilerArgs>
+                            <arg>-Xlint:unchecked</arg>
+                        </compilerArgs>
                         <parameters>true</parameters>
                         <annotationProcessorPaths>
                             <path>
