--- a/turing-mcp-server/pom.xml
+++ b/turing-mcp-server/pom.xml
@@ -15,6 +15,10 @@
     <packaging>jar</packaging>
     <properties>
         <java.version>21</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <spring-ai.version>1.1.2</spring-ai.version>
     </properties>
     <dependencies>
