Exclude 'turing' artifact from publishing
Added the 'turing' artifact to the excludeArtifacts list in the Maven plugin configuration to prevent it from being published to the central repository.

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,9 @@
                 <extensions>true</extensions>
                 <configuration>
                     <publishingServerId>central</publishingServerId>
+                    <excludeArtifacts>
+                        <artifact>turing</artifact>
+                    </excludeArtifacts>
                 </configuration>
             </plugin>
             <plugin>
