--- a/turing-react/package.json
+++ b/turing-react/package.json
@@ -5,7 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "compile": "npm install && tsc -b && vite build",
+    "dev:search": "vite --config vite.config.search.ts --port 5174",
+    "compile": "npm install && tsc -b && vite build && vite build --config vite.config.search.ts",
+    "compile:console": "npm install && tsc -b && vite build",
+    "compile:search": "npm install && tsc -b && vite build --config vite.config.search.ts",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -49,7 +52,8 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.11",
     "vaul": "^1.1.2",
-    "zod": "^4.2.1"
+    "zod": "^4.2.1",
+    "moment": "^2.30.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
