--- a/turing-ui/package.json
+++ b/turing-ui/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "compile": "npm install && ng build welcome && ng build console && ng build sn",
+    "compile": "npm install && ng build welcome && ng build console",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "sonar": "sonar-scanner"
