--- a/turing-react/package.json
+++ b/turing-react/package.json
@@ -70,5 +70,9 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.50.1",
     "vite": "^7.3.0"
+  },
+  "engines": {
+    "node": "^22.0.0",
+    "npm": "^10.0.0"
   }
 }
