--- a/turing-js-sdk/js-sdk-sample/package.json
+++ b/turing-js-sdk/js-sdk-sample/package.json
@@ -64,5 +64,9 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.50.1",
     "vite": "^7.3.0"
+  },
+  "engines": {
+    "node": "^24.0.0",
+    "npm": "^11.0.0"
   }
 }
