Update to Java 21 and Node.js 24 in build configs
Switched Maven compiler configuration to use <maven.compiler.release>21</maven.compiler.release> across all modules for consistency and modern Java support. Updated GitHub Actions workflows to use Node.js 24.12.0 instead of 18.10.0. Also updated Eclipse Java style to set compiler source to 21.

--- a/turing-app/pom.xml
+++ b/turing-app/pom.xml
@@ -16,8 +16,7 @@
         <elasticsearch.version>9.2.3</elasticsearch.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.release>21</maven.compiler.release>
         <sonar.organization>viglet</sonar.organization>
         <sonar.projectKey>viglet_turing</sonar.projectKey>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
