--- a/turing-commons/pom.xml
+++ b/turing-commons/pom.xml
@@ -44,8 +44,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.release>21</maven.compiler.release>
         <maven.deploy.skip>false</maven.deploy.skip>
     </properties>
     <dependencies>
