--- a/turing-mcp-server/pom.xml
+++ b/turing-mcp-server/pom.xml
@@ -17,8 +17,7 @@
         <java.version>21</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.release>21</maven.compiler.release>
         <spring-ai.version>1.1.2</spring-ai.version>
     </properties>
     <dependencies>
@@ -131,8 +130,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>15</source>
-                    <target>15</target>
+                    <release>21</release>
+                    <target>21</target>
                 </configuration>
             </plugin>
         </plugins>
