Add groupId to commons and java-sdk pom.xml files
Added the <groupId>com.viglet.turing</groupId> element to both turing-commons and turing-java-sdk pom.xml files to explicitly specify the group ID for these modules.

--- a/turing-java-sdk/pom.xml
+++ b/turing-java-sdk/pom.xml
@@ -9,6 +9,7 @@
         <version>2026.1.6</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
+    <groupId>com.viglet.turing</groupId>
     <artifactId>turing-java-sdk</artifactId>
     <packaging>jar</packaging>
     <name>Turing Java SDK</name>
