--- a/turing-commons/pom.xml
+++ b/turing-commons/pom.xml
@@ -14,6 +14,7 @@
         <version>2026.1.6</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
+    <groupId>com.viglet.turing</groupId>
     <artifactId>turing-commons</artifactId>
     <packaging>jar</packaging>
     <name>Turing Commons</name>
