Remove transient from fields and attributes in beans
Removed the 'transient' modifier from 'fields', 'facetName', and 'attributes' in TurSNSiteSearchDocumentBean, TurSNJobAttributeSpec, and TurSNJobItem, respectively, and added @SuppressWarnings("java:S1948") to address serialization concerns. Also added spring-boot-starter-json dependency to turing-app. These changes improve serialization compatibility for these beans.

--- a/turing-app/pom.xml
+++ b/turing-app/pom.xml
@@ -82,6 +82,10 @@
             <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-json</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-hibernate7</artifactId>
             <version>2.20.1</version>
