Add Node.js version checks and update configs
Introduced check-node.cjs scripts and .npmrc with engine-strict for both turing-react and turing-ui to enforce Node.js version requirements. Updated package.json scripts to run version checks before key commands. Expanded Spring configuration metadata and logging structure, and updated turing-spring.cmd to enable MongoDB logging by default.

--- a/turing-app/src/main/resources/application.yaml
+++ b/turing-app/src/main/resources/application.yaml
@@ -139,12 +139,16 @@ management:
 logging:
   config: classpath:logback-spring.xml
   level:
-    org.springframework: INFO
-    com.viglet: INFO
-    org.apache: INFO
-    org.apache.activemq: ERROR
-    dev.langchain4j: INFO
-    dev.ai4j.openai4j: INFO
+    org:
+      springframework: INFO
+      apache: INFO
+      "[apache.activemq]": ERROR
+    com:
+      viglet: INFO
+    dev:
+      langchain4j: INFO
+      ai4j:
+        openai4j: INFO
   file:
     name: store/logs/turing.log
   logback:
