--- a/turing-react/package.json
+++ b/turing-react/package.json
@@ -4,6 +4,9 @@
   "version": "2026.1",
   "type": "module",
   "scripts": {
+    "check-node": "node check-node.cjs",
+    "predev": "npm run check-node",
+    "prebuild": "npm run check-node",
     "dev": "vite",
     "dev:search": "vite --config vite.config.search.ts --port 5174",
     "compile": "npm install && tsc -b && vite build && vite build --config vite.config.search.ts",
@@ -41,6 +44,7 @@
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
     "lucide-react": "^0.562.0",
+    "moment": "^2.30.1",
     "next-themes": "^0.4.6",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
@@ -52,8 +56,7 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.11",
     "vaul": "^1.1.2",
-    "zod": "^4.3.5",
-    "moment": "^2.30.1"
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
