--- a/turing-app/pom.xml
+++ b/turing-app/pom.xml
@@ -487,6 +487,26 @@
                 <artifactId>maven-pdf-plugin</artifactId>
                 <version>1.6.2</version>
             </plugin>
+            <plugin>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <version>4.25.0</version>
+                <configuration>
+                    <searchPath>src/main/resources</searchPath>
+                    <outputChangeLogFile>src/main/resources/db/changelog/v2025.3_baseline.yaml</outputChangeLogFile>
+                    <url>jdbc:h2:file:./store/db/turingDB;AUTO_SERVER=TRUE</url>
+                    <username>sa</username>
+                    <password></password>
+                    <driver>org.h2.Driver</driver>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.h2database</groupId>
+                        <artifactId>h2</artifactId>
+                        <version>2.4.240</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
         </plugins>
     </build>
     <reporting>
