Add Liquibase support and baseline changelogs
Integrate Liquibase for database migrations: add liquibase.properties, a CLI helper (liquidbase-update.cmd), and a master changelog that includes a generated baseline (v2025.3_baseline.yaml) and an update changelog (v2026.1_update.yaml). Remove the old Gradle liquibase task (turing-app/liquibase.gradle) and update pom.xml to include spring-boot-starter-liquibase and upgrade/configure the liquibase-maven-plugin to use the property file and diffChangeLogFile. Update application.yaml to enable Liquibase, adjust the H2 connection URL, and switch hibernate ddl-auto to validate.

--- a/turing-app/src/main/resources/application.yaml
+++ b/turing-app/src/main/resources/application.yaml
@@ -14,10 +14,14 @@ spring:
       settings:
         web-allow-others: true
   datasource:
-    url: jdbc:h2:file:./store/db/turingDB
+    url: jdbc:h2:file:./store/db/turingDB;DATABASE_TO_UPPER=false;CASE_INSENSITIVE_IDENTIFIERS=true
     username: sa
     password: ""
     driver-class-name: org.h2.Driver
+  liquibase:
+    change-log: classpath:db/changelog/db.changelog-master.yaml
+    enabled: true
+    default-schema: PUBLIC
   jpa:
     properties:
       hibernate:
@@ -27,7 +31,7 @@ spring:
         generate_statistics: false
       jakarta.persistence.sharedCache.mode: ALL
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     show-sql: false
   jackson:
     mapper:
