--- a/turing-app/pom.xml
+++ b/turing-app/pom.xml
@@ -47,6 +47,10 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-liquibase</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-artemis</artifactId>
         </dependency>
         <dependency>
@@ -490,14 +494,10 @@
             <plugin>
                 <groupId>org.liquibase</groupId>
                 <artifactId>liquibase-maven-plugin</artifactId>
-                <version>4.25.0</version>
+                <version>5.0.1</version>
                 <configuration>
-                    <searchPath>src/main/resources</searchPath>
-                    <outputChangeLogFile>src/main/resources/db/changelog/v2025.3_baseline.yaml</outputChangeLogFile>
-                    <url>jdbc:h2:file:./store/db/turingDB;AUTO_SERVER=TRUE</url>
-                    <username>sa</username>
-                    <password></password>
-                    <driver>org.h2.Driver</driver>
+                    <propertyFile>liquibase.properties</propertyFile>
+                    <diffChangeLogFile>src/main/resources/db/changelog/v2026.1_update.yaml</diffChangeLogFile>
                 </configuration>
                 <dependencies>
                     <dependency>
