Quote mapping keys in application.yaml
Wrap several YAML keys in quotes/bracketed form to preserve their literal names and avoid YAML parsing as nested keys or special tokens. Updated spring.jpa properties (globally_quoted_identifiers, format_sql, enable_lazy_load_no_trans, generate_statistics), jakarta.persistence.sharedCache.mode, and jackson.mapper.DEFAULT_VIEW_INCLUSION to quoted bracketed keys. No behavior changes intended — this ensures the keys are interpreted exactly as written.

--- a/turing-app/src/main/resources/application.yaml
+++ b/turing-app/src/main/resources/application.yaml
@@ -25,17 +25,17 @@ spring:
   jpa:
     properties:
       hibernate:
-        globally_quoted_identifiers: true
-        format_sql: false
-        enable_lazy_load_no_trans: true
-        generate_statistics: false
-      jakarta.persistence.sharedCache.mode: ALL
+        "[globally_quoted_identifiers]": true
+        "[format_sql]": false
+        "[enable_lazy_load_no_trans]": true
+        "[generate_statistics]": false
+      "[jakarta.persistence.sharedCache.mode]": ALL
     hibernate:
       ddl-auto: validate
     show-sql: false
   jackson:
     mapper:
-      DEFAULT_VIEW_INCLUSION: true
+      "[DEFAULT_VIEW_INCLUSION]": true
   thymeleaf:
     mode: HTML
     check-template: true
