Refactor SN APIs and result ranking UI
Backend: set TurSNSite on ranking expressions when creating/updating and normalize path variable name to snSiteId across TurSNSiteFieldExtAPI endpoints; add new spring metadata property turing.solr.commit.enabled. Frontend: reorganize/move SN components (fields and result-ranking), update imports and routes, and improve Result Ranking pages — add delete handling with toast and navigation, use ROUTES constants, and fix links. Refactor result-ranking form to use react-hook-form defaults, updated service usage (create/update), changed dynamic result-ranking field shape (attribute/condition/value) and wiring, and improve slider binding. Also tweak button styles (cursor/disabled) and small UI/import fixes.

--- a/turing-app/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/turing-app/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -89,6 +89,11 @@
       "name": "turing.url",
       "type": "java.lang.String",
       "description": "Base URL of the Turing application (e.g., http://localhost:2700)."
+    },
+    {
+      "name": "turing.solr.commit.enabled",
+      "type": "java.lang.String",
+      "description": "A description for 'turing.solr.commit.enabled'"
     }
   ]
 }
