Change redirects, remove constant, use npm ci
Update index redirect targets: authenticated users are redirected to /admin instead of /console, and unauthenticated users to /login instead of /welcome. Remove unused CONSOLE constant from TuringES. Replace npm install with npm ci in turing-react and turing-ui build scripts to ensure reproducible and faster CI installs.

--- a/turing-react/package.json
+++ b/turing-react/package.json
@@ -9,9 +9,9 @@
     "prebuild": "npm run check-node",
     "dev": "vite",
     "dev:search": "vite --config vite.config.search.ts --port 5174",
-    "compile": "npm install && tsc -b && vite build && vite build --config vite.config.search.ts",
-    "compile:console": "npm install && tsc -b && vite build",
-    "compile:search": "npm install && tsc -b && vite build --config vite.config.search.ts",
+    "compile": "npm ci && tsc -b && vite build && vite build --config vite.config.search.ts",
+    "compile:console": "npm ci && tsc -b && vite build",
+    "compile:search": "npm ci && tsc -b && vite build --config vite.config.search.ts",
     "lint": "eslint .",
     "preview": "vite preview"
   },
