--- a/turing-react/package.json
+++ b/turing-react/package.json
@@ -8,10 +8,7 @@
     "predev": "npm run check-node",
     "prebuild": "npm run check-node",
     "dev": "vite",
-    "dev:search": "vite --config vite.config.search.ts --port 5174",
-    "compile": "npm ci && tsc -b && vite build && vite build --config vite.config.search.ts",
-    "compile:console": "npm ci && tsc -b && vite build",
-    "compile:search": "npm ci && tsc -b && vite build --config vite.config.search.ts",
+    "compile": "npm ci && tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
