--- a/turing-app/pom.xml
+++ b/turing-app/pom.xml
@@ -398,8 +398,7 @@
                         <configuration>
                             <workingDirectory>../turing-ui</workingDirectory>
                         </configuration>
-                        <!-- optional: default phase is "generate-resources" -->
-                        <phase>generate-resources</phase>
+                        <phase>prepare-package</phase>
                     </execution>
                     <execution>
                         <id>angular compile</id>
@@ -410,6 +409,7 @@
                             <arguments>run compile</arguments>
                             <workingDirectory>../turing-ui</workingDirectory>
                         </configuration>
+                        <phase>prepare-package</phase>
                     </execution>
                     <execution>
                         <!-- optional: you don't really need execution ids, but it looks nice in your build log. -->
@@ -420,8 +420,7 @@
                         <configuration>
                             <workingDirectory>../turing-react</workingDirectory>
                         </configuration>
-                        <!-- optional: default phase is "generate-resources" -->
-                        <phase>generate-resources</phase>
+                        <phase>prepare-package</phase>
                     </execution>
                     <execution>
                         <id>react compile</id>
@@ -432,6 +431,7 @@
                             <arguments>run compile</arguments>
                             <workingDirectory>../turing-react</workingDirectory>
                         </configuration>
+                        <phase>prepare-package</phase>
                     </execution>
                 </executions>
                 <configuration>
