--- a/turing-app/pom.xml
+++ b/turing-app/pom.xml
@@ -391,28 +391,6 @@
                 <executions>
                     <execution>
                         <!-- optional: you don't really need execution ids, but it looks nice in your build log. -->
-                        <id>angular install node and npm</id>
-                        <goals>
-                            <goal>install-node-and-npm</goal>
-                        </goals>
-                        <configuration>
-                            <workingDirectory>../turing-ui</workingDirectory>
-                        </configuration>
-                        <phase>prepare-package</phase>
-                    </execution>
-                    <execution>
-                        <id>angular compile</id>
-                        <goals>
-                            <goal>npm</goal>
-                        </goals>
-                        <configuration>
-                            <arguments>run compile</arguments>
-                            <workingDirectory>../turing-ui</workingDirectory>
-                        </configuration>
-                        <phase>prepare-package</phase>
-                    </execution>
-                    <execution>
-                        <!-- optional: you don't really need execution ids, but it looks nice in your build log. -->
                         <id>react install node and npm</id>
                         <goals>
                             <goal>install-node-and-npm</goal>
@@ -420,7 +398,8 @@
                         <configuration>
                             <workingDirectory>../turing-react</workingDirectory>
                         </configuration>
-                        <phase>prepare-package</phase>
+                        <!-- optional: default phase is "generate-resources" -->
+                        <phase>generate-resources</phase>
                     </execution>
                     <execution>
                         <id>react compile</id>
@@ -431,7 +410,6 @@
                             <arguments>run compile</arguments>
                             <workingDirectory>../turing-react</workingDirectory>
                         </configuration>
-                        <phase>prepare-package</phase>
                     </execution>
                 </executions>
                 <configuration>
