Improve grids/UI, add log highlighter & GenAI form
Enable MongoDB in application config and add date-fns dependency. Update multiple React grid components to show formatted timestamps with relative "time ago", collapse long IDs/URLs with truncateMiddle, use NavLink/cn for links, and render status/environment/locale as styled Badge components with icons and flag images. Add shared utils (truncateMiddle, getFlagEmoji, cn). Introduce a LogHighlighter component to highlight log message fragments and integrate it into the logging grid. Enhance GenAI site form with variable insertion buttons, required-tag validation ({{question}} and {{information}}), UI status badges, and improved form controls. Also add name validation pattern to site form. Package.json and lockfile updated for the new dependency.

--- a/turing-app/src/main/resources/application.yaml
+++ b/turing-app/src/main/resources/application.yaml
@@ -118,7 +118,7 @@ turing:
         seconds: 86400000
       enabled: false
   mongodb:
-    enabled: false
+    enabled: true
     uri: mongodb://localhost:27017
     logging:
       database: turingLog
