--- a/turing-react/package.json
+++ b/turing-react/package.json
@@ -42,6 +42,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.563.0",
     "moment": "^2.30.1",
     "next-themes": "^0.4.6",
