Introduce LoadProvider and field grid UI
Add a new LoadProvider component to centralize loading/error UI and wrap many console pages (integration, LLM, SE, SN, store, token, logging) to handle async fetch errors and loading states. Extract complex SN field table logic into a new SNSiteFieldGridList component (field.grid.list.tsx) and simplify the original SN field page to use it. Also update several pages to set error state on fetch failures and adapt 'new' flows to initialize empty instances. Minor UI/text tweaks (token blank slate text, grid.list cleanup). Remove turing-app/missing-tests.txt and disable MongoDB by default (application.yaml: mongodb.enabled = false).

--- a/turing-app/src/main/resources/application.yaml
+++ b/turing-app/src/main/resources/application.yaml
@@ -118,7 +118,7 @@ turing:
         seconds: 86400000
       enabled: false
   mongodb:
-    enabled: true
+    enabled: false
     uri: mongodb://localhost:27017
     logging:
       database: turingLog
