Rename SE custom facet to SN and apply UI tweaks
Rename SE custom-facet model/service/components to SN site custom facet (models, service, form, pages) and update imports/usages accordingly; remove old SE service and add new SN service. UI adjustments: change grid edit action to an outlined "Edit" button and center header, change various buttons to use smaller/icon sizes, replace textual Delete buttons with trash icon buttons and add Tooltip for token delete, refine Token form layout and copy button, and tweak SubPageHeader spacing and description markup. Build/config changes: enforce forceConsistentCasingInFileNames in tsconfig, update path import to node:path and set build.emptyOutDir in vite.config.

--- a/turing-react/tsconfig.app.json
+++ b/turing-react/tsconfig.app.json
@@ -22,11 +22,9 @@
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
-    "baseUrl": ".",
+    "forceConsistentCasingInFileNames": true,
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["./src/*"]
     }
   },
   "include": ["src"]
