Make JMS listener concurrency configurable
Add configurable concurrency to the JMS listener by setting concurrency = "${turing.jms.concurrency:1-1}" on the @JmsListener in TurSNProcessQueue. Add a new configuration metadata entry for turing.jms.concurrency and set a default value in application.yaml (turing.jms.concurrency: 1-1). Also apply minor formatting/whitespace fixes in TurSNProcessQueue.

--- a/turing-app/src/main/resources/application.yaml
+++ b/turing-app/src/main/resources/application.yaml
@@ -101,6 +101,7 @@ turing:
   keycloak: false
   url: http://localhost:2700
   open-browser: true
+  jms.concurrency: 1-1
   solr:
     timeout: 30000
     cloud: false
