--- a/turing-app/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/turing-app/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -94,6 +94,11 @@
       "name": "turing.solr.commit.enabled",
       "type": "java.lang.String",
       "description": "A description for 'turing.solr.commit.enabled'"
+    },
+    {
+      "name": "turing.jms.concurrency",
+      "type": "java.lang.String",
+      "description": "A description for 'turing.jms.concurrency'"
     }
   ]
 }
